tests/errors/validation/ref-modifier-on-function.fn
---
Description: ref modifier applied to a function declaration
Expected: compile error
---

type Holder
{
    ref fn BadModFn() -> i32
    {
        return 0
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
